Added call to visualise anyadl comparison

--- a/FEM_R/IJM_paper1_vis_WIP.Rmd
+++ b/FEM_R/IJM_paper1_vis_WIP.Rmd
@@ -427,6 +427,11 @@ ggplot(data=base, aes(x=year, y=p_hearte_all)) +
 ggplot(data=pop_rbmi, aes(x=year, y=p_hearte_all)) +
   geom_line()
 
+ggplot(data=base, aes(x=year, y=p_anyadl_all)) +
+  geom_line()
+ggplot(data=pop_rbmi, aes(x=year, y=p_anyadl_all)) +
+  geom_line()
+
 ```
 
 
