--- a/FEM_R/model_analysis.Rmd
+++ b/FEM_R/model_analysis.Rmd
@@ -20,7 +20,7 @@ knitr::opts_knit$set(root.dir = workingDir)
 require(tidyverse)
 require(formattable)
 require(reactable)
-#require(haven)
+require(haven)
 #require(reshape2)
 #require(ggplot2)
 #require(gridExtra)
@@ -226,3 +226,68 @@ bineconTab
 riskTab <- createTTT(risk)
 riskTab
 ```
+
+# Cross Validation 2 - 'Handover' plots
+
+```{r echo = FALSE}
+vis_CV2_prev <- function(long, CV2) {
+  
+  # Keep only waves 1 - 4
+  longC <- subset(long, wave < 5)
+  longC <- as.data.table(longC)
+  
+  # Replace all NA with 0
+  longC[is.na(longC)] <- 0
+  
+  # Have to drop r*clust vars as they contain strings
+  longC <- select(longC, -contains('clust'))
+  
+  # Now get the weighted mean by wave of every column based on cwtresp
+  l2 <- longC[ , lapply(.SD,weighted.mean,w=cwtresp), by = list(wave)]
+  
+  # ELSA_long is now processed to the point where we can start extracting and combining variables
+  # Better start by adding year to l2 and reordering the columns
+  l2$year <- seq(from=2002, to = 2008, by = 2)
+  setcolorder(l2, c('year', 'wave'))
+  
+  # Now lets extract chronic disease variables from both dataframes and do a row combine
+  # Start with cancre, diabe, hearte
+  cd_l2 <- select(l2, c(year, age, cancre, diabe, hearte, lunge, smoken, bmi, work, anyadl)) #, anyiadl, adl1, adl2, adl3p))
+  cd_CV2 <- select(CV2, c(year, a_age_all, p_cancre_all, p_diabe_all, 
+                            p_hearte_all, p_lunge_all, p_smoken_all, 
+                            a_bmi_all, p_work_all,  p_anyadl_all))
+                            #, p_anyiadl_all p_adl1_all, p_adl2_all, p_adl3p_all))
+  
+  CV2_rename <- cd_CV2 %>% dplyr::rename('age' = a_age_all,
+                                        'cancre' = p_cancre_all, 
+                                        'diabe' = p_diabe_all, 
+                                        'hearte' = p_hearte_all,
+                                        'lunge' = p_lunge_all,
+                                        'smoken' = p_smoken_all,
+                                        'bmi' = a_bmi_all,
+                                        'work' = p_work_all,
+                                        'anyadl' = p_anyadl_all)
+                                        #'anyiadl' = p_anyiadl_all)
+                                        #'adl1' = p_adl1_all,
+                                        #'adl2' = p_adl2_all,
+                                        #'adl3p' = p_adl3p_all)
+  
+  combine <- rbind(cd_l2, CV2_rename)
+  
+  melted <- melt(combine, id.var = 'year', value.name = 'Prevalence')
+  
+  ggplot(data = melted, aes(x = year, y = Prevalence, color = variable)) +
+          geom_line() +
+          facet_wrap(. ~ variable, scales = "free")
+          #theme(panel.spacing.x = unit(1.5, 'lines')) +
+          #labs(title = 'Prevalence of Chronic Disease', x = 'Year', y = 'Prevalence')
+}
+
+# Load in whole stock pop, plus the CV2 summary output file
+long <- read_dta('../input_data/ELSA_long.dta')
+CV2 <- read_dta('ELSA_CrossValidation2/ELSA_CrossValidation2_summary.dta')
+
+vis_CV2_prev(long, CV2)
+```
+
+
