Added variable for work status, as well as dummy vars for employed, unemployed and retired. All vars linked to the original workstat variable

--- a/FEM_R/model_analysis.Rmd
+++ b/FEM_R/model_analysis.Rmd
@@ -186,6 +186,8 @@ createTTT <- function(t) {
                   minWidth = 160,
                   style = stickyStyle,
                   headerStyle = stickyStyle),
+              P_Value_1 = pValColDef2,
+              P_Value_2 = pValColDef2,
               P_Value_3 = pValColDef2,
               P_Value_4 = pValColDef2,
               P_Value_5 = pValColDef2,
